--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "reelweave",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
   "dependencies": {
     "@ar.io/sdk": "^3.10.2",
     "@testing-library/dom": "^10.4.0",
@@ -11,8 +12,11 @@
     "arweave": "^1.15.7",
     "date-fns": "^4.1.0",
     "graphql": "^16.11.0",
+    "i18next": "^23.16.8",
+    "i18next-browser-languagedetector": "^7.2.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-i18next": "^14.1.3",
     "react-router-dom": "^6.30.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
