--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "arweave": "^1.15.7",
+    "axios": "^1.9.0",
     "date-fns": "^4.1.0",
     "graphql": "^16.11.0",
     "i18next": "^23.16.8",
